fix: fix close button icon on mobile

--- a/blocks/button/_type/button_type_close.css
+++ b/blocks/button/_type/button_type_close.css
@@ -7,6 +7,7 @@
   right: -40px;
   background-image: url("../../../images/close-button.svg");
   padding: 0;
+  margin: 0;
   background-position: center;
   background-repeat: no-repeat;
   background-color: transparent;
@@ -15,9 +16,10 @@
 
 @media screen and (max-width: 768px) {
   .button_type_close {
+    background-image: url("../../../images/close-button-mobile.svg");
     top: -42px;
     right: 8px;
-    width: 19px;
-    height: 19px;
+    width: 20px;
+    height: 20px;
   }
 }
